// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should filter options when using filter prop 1`] = `
<div class="mi-picker">
  <div class="mi-picker__toolbar">
    <button
      type="button"
      class="mi-picker__cancel mi-haptics-feedback"
    >
      Cancel
    </button>
    <button
      type="button"
      class="mi-picker__confirm mi-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  <div
    class="mi-picker__columns"
    style="height: 264px;"
  >
    <div class="mi-picker-column">
      <ul
        style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
        class="mi-picker-column__wrapper"
      >
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item mi-picker-column__item--selected"
        >
          <div class="mi-ellipsis">
            2000
          </div>
        </li>
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item"
        >
          <div class="mi-ellipsis">
            2010
          </div>
        </li>
      </ul>
    </div>
    <div class="mi-picker-column">
      <ul
        style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
        class="mi-picker-column__wrapper"
      >
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item mi-picker-column__item--selected"
        >
          <div class="mi-ellipsis">
            10
          </div>
        </li>
      </ul>
    </div>
    <div class="mi-picker-column">
      <ul
        style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
        class="mi-picker-column__wrapper"
      >
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item mi-picker-column__item--selected"
        >
          <div class="mi-ellipsis">
            10
          </div>
        </li>
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item"
        >
          <div class="mi-ellipsis">
            20
          </div>
        </li>
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item"
        >
          <div class="mi-ellipsis">
            30
          </div>
        </li>
      </ul>
    </div>
    <div
      class="mi-picker__mask"
      style="background-size: 100% 110px;"
    >
    </div>
    <div
      class="mi-hairline-unset--top-bottom mi-picker__frame"
      style="height: 44px;"
    >
    </div>
  </div>
</div>
`;

exports[`should format options correctly when using formatter prop 1`] = `
<div class="mi-picker">
  <div class="mi-picker__toolbar">
    <button
      type="button"
      class="mi-picker__cancel mi-haptics-feedback"
    >
      Cancel
    </button>
    <button
      type="button"
      class="mi-picker__confirm mi-haptics-feedback"
    >
      Confirm
    </button>
  </div>
  <div
    class="mi-picker__columns"
    style="height: 264px;"
  >
    <div class="mi-picker-column">
      <ul
        style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
        class="mi-picker-column__wrapper"
      >
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item mi-picker-column__item--selected"
        >
          <div class="mi-ellipsis">
            2000 year
          </div>
        </li>
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item"
        >
          <div class="mi-ellipsis">
            2010 year
          </div>
        </li>
      </ul>
    </div>
    <div class="mi-picker-column">
      <ul
        style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
        class="mi-picker-column__wrapper"
      >
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item mi-picker-column__item--selected"
        >
          <div class="mi-ellipsis">
            10 month
          </div>
        </li>
      </ul>
    </div>
    <div class="mi-picker-column">
      <ul
        style="transform: translate3d(0, 110px, 0); transition-duration: 0ms; transition-property: none;"
        class="mi-picker-column__wrapper"
      >
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item mi-picker-column__item--selected"
        >
          <div class="mi-ellipsis">
            10 day
          </div>
        </li>
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item"
        >
          <div class="mi-ellipsis">
            20 day
          </div>
        </li>
        <li
          role="button"
          style="height: 44px;"
          tabindex="0"
          class="mi-picker-column__item"
        >
          <div class="mi-ellipsis">
            30 day
          </div>
        </li>
      </ul>
    </div>
    <div
      class="mi-picker__mask"
      style="background-size: 100% 110px;"
    >
    </div>
    <div
      class="mi-hairline-unset--top-bottom mi-picker__frame"
      style="height: 44px;"
    >
    </div>
  </div>
</div>
`;

exports[`should render title slot correctly 1`] = `
<div class="mi-picker__toolbar">
  <button
    type="button"
    class="mi-picker__cancel mi-haptics-feedback"
  >
    Cancel
  </button>
  Custom title
  <button
    type="button"
    class="mi-picker__confirm mi-haptics-feedback"
  >
    Confirm
  </button>
</div>
`;
